force-app/main/default/objects/Integration__c/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <label>last</label>
    <length>20</length>
    <type>Text</type>
</CustomField>