force-app/main/default/objects/Integration__c/fields/search__c.field-meta.xml
<CustomField>
    <fullName>search__c</fullName>
    <formula>first__c+ last__c + street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>search</label>
    <type>Text</type>
</CustomField>